--- a/index.html
+++ b/index.html
@@ -6,9 +6,25 @@
         <title>Finance</title>
 
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+        <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?v=2">
         <meta name="theme-color" content="#ff9c0f"/>
+        <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/manifest.json">
+        <meta name="msapplication-TileColor" content="#ff9c0f">
+        <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 
         <!-- Disable tap highlight on IE -->
         <meta name="msapplication-tap-highlight" content="no">
@@ -30,49 +46,49 @@
 	</head>
 </html>
 	<body>
+        <div class="black-nav">
+            <div class="uk-container uk-container-center navbar-container">
 
-        <div class="uk-container uk-container-center navbar-container">
+                <nav class="uk-navbar">
+                    <a class="uk-navbar-brand uk-vertical-align uk-hidden-small" href="#">
 
-            <nav class="uk-navbar">
-                <a class="uk-navbar-brand uk-vertical-align uk-hidden-small" href="#">
+                        <img src="img/logo.svg" alt="finance" class="uk-margin-top">
 
-                    <img src="img/logo.svg" alt="finance" class="uk-margin-top">
-
-                </a>
-                <ul class="uk-navbar-nav uk-hidden-small">
-                    <li class="uk-active">
-                        <a href="#benefits" data-uk-smooth-scroll="{offset: 0}">Преимущества</a>
-                    </li>
-                    <li>
-                        <a href="#form-request" data-uk-smooth-scroll="{offset: 5, 'before': 'changeCls'}">Получить карту быстро</a>
-                    </li>
-                    <li>
-                        <a href="#credit-cards" data-uk-smooth-scroll="{offset: 0, 'before': 'changeCls'}">Кредитные карты</a>
-                    </li>
-                    <li>
-                        <a href="tel:0 800 307 555" class="uk-navbar-nav-subtitle">
-                            <span>0 800 307 555</span>
-                            <div>бесплатно с любого номера телефона</div>
-                        </a>
-                    </li>
-                </ul>
-                <a href="#offcanvas" class="uk-navbar-toggle uk-visible-small" data-uk-offcanvas></a>
-                <div class="uk-flex uk-flex-wrap uk-visible-small">
-                    <div class="uk-flex uk-flex-middle uk-flex-wrap uk-flex-wrap-top">
-                        <img src="img/finline_logo.svg" alt="finline" class="uk-responsive-height" style="max-width: 26%;margin-top: 5px;">
-                        <img src="img/alfa-logo.png" alt="" class="uk-responsive-height" style="max-width: 28%;">
-                        <img src="img/pb-logo.png" alt="" class="uk-responsive-height" style="max-width: 45%;margin-bottom: 5px;">
+                    </a>
+                    <ul class="uk-navbar-nav uk-hidden-small">
+                        <li class="uk-active">
+                            <a href="#benefits" data-uk-smooth-scroll="{offset: 0}">Преимущества</a>
+                        </li>
+                        <li>
+                            <a href="#form-request" data-uk-smooth-scroll="{offset: 5, 'before': 'changeCls'}">Получить карту быстро</a>
+                        </li>
+                        <li>
+                            <a href="#credit-cards" data-uk-smooth-scroll="{offset: 0, 'before': 'changeCls'}">Кредитные карты</a>
+                        </li>
+                        <li>
+                            <a href="tel:0 800 307 555" class="uk-navbar-nav-subtitle">
+                                <span>0 800 307 555</span>
+                                <div>бесплатно с любого номера телефона</div>
+                            </a>
+                        </li>
+                    </ul>
+                    <a href="#offcanvas" class="uk-navbar-toggle uk-visible-small" data-uk-offcanvas></a>
+                    <div class="uk-flex uk-flex-wrap uk-visible-small">
+                        <div class="uk-flex uk-flex-middle uk-flex-wrap uk-flex-wrap-top">
+                            <img src="img/logo.svg" alt="finance" class="uk-responsive-height" style="max-width: 26%;margin-top: 5px;">
+                            <img src="img/alfa-logo.png" alt="" class="uk-responsive-height" style="max-width: 28%;">
+                            <img src="img/pb-logo.png" alt="" class="uk-responsive-height" style="max-width: 45%;margin-bottom: 5px;">
+                        </div>
+                        <div class="uk-flex uk-flex-middle uk-flex-wrap uk-flex-wrap-bottom">
+                            <img src="img/otp-logo.png" alt="" class="uk-responsive-height" style="max-width: 38%;margin-left: -8px;">
+                            <img src="img/pumb-logo.png" alt="" class="uk-responsive-height">
+                            <img src="img/idea-logo.png" alt="" class="uk-responsive-height" style="max-width: 36%;margin-left: 8px;">
+                        </div>
                     </div>
-                    <div class="uk-flex uk-flex-middle uk-flex-wrap uk-flex-wrap-bottom">
-                        <img src="img/otp-logo.png" alt="" class="uk-responsive-height" style="max-width: 38%;margin-left: -8px;">
-                        <img src="img/pumb-logo.png" alt="" class="uk-responsive-height">
-                        <img src="img/idea-logo.png" alt="" class="uk-responsive-height" style="max-width: 36%;margin-left: 8px;">
-                    </div>
-                </div>
-            </nav>
+                </nav>
 
+            </div>
         </div>
-
 
         <div class="uk-grid" id="benefits" data-uk-grid-margin>
             <div class="uk-width-medium-1-1 uk-height-slider">
@@ -103,8 +119,8 @@
                             <li >
                                 <div class="uk-panel uk-text-center">
                                     <img src="img/icon3.png" alt="" >
-                                    <div class="uk-panel-header">Получите наиболее <br>выгодное предложение по кредиту.</div>
-                                    <div class="uk-panel-teaser">У Вас есть возможность получить кредит <br>с лучшими условиями.</div>
+                                    <div class="uk-panel-header">Позвольте себе больше.</div>
+                                    <div class="uk-panel-teaser">Получите действительно выгодные условия, <br>тратьте и зарабатывайте на этом.</div>
                                 </div>
                             </li>
                             <li >
@@ -150,8 +166,8 @@
                         </div>
                         <div class="uk-block uk-padding-remove">
                             <img src="img/icon3.png" alt="" class="uk-align-left">
-                            <div class="uk-panel-header uk-text-left">Получите наиболее выгодное предложение по кредиту.<br>
-                                <span>У Вас есть возможность получить кредит с лучшими условиями.</span>
+                            <div class="uk-panel-header uk-text-left">Позвольте себе больше.<br>
+                                <span>Получите действительно выгодные условия, тратьте и зарабатывайте на этом.</span>
                             </div>
                             <!-- <div class="uk-panel-teaser uk-text-left">У Вас есть возможность получить кредит <br>с лучшими условиями.</div> -->
                         </div>
@@ -329,11 +345,11 @@
         </div>
 
 
-        <div class="uk-grid grey-bg uk-hidden" id="credit-cards" data-uk-grid-margin>
+        <div class="uk-grid grey-bg " id="credit-cards" data-uk-grid-margin>
 
             <div class="uk-width-1-1">
 
-                <h1 class="uk-text-center uk-margin-large-top uk-margin-medium-bottom" style="font-size: 22px;margin-bottom: 20px!important;margin-top: 40px!important;">Кредитные карты</h1>
+                <h1 class="uk-text-center uk-margin-large-top uk-margin-medium-bottom" style="font-size: 22px;margin-bottom: 20px!important;margin-top: 40px!important;">Finance.ua специально для вас подобрал лучшие предложения от банков Украины</h1>
 
                 <div data-uk-slideshow="{autoplay:true,animation:'scroll'}" class="uk-position-relative uk-visible-small">
                     <ul class="uk-slideshow">
@@ -819,7 +835,8 @@
                 v.setAttribute('content', 'width=device-width, initial-scale='+s+', user-scalable=0');
             }
             w.changeCls = function(e) {
-                $("#credit-cards, #form-request").each(function() {
+                // #credit-cards, 
+                $("#form-request").each(function() {
                     if ($(this).hasClass("uk-hidden")&&$(this).attr("id")==e.attr("id")) {
                         $(this).removeClass("uk-hidden");
                     } else if (!$(this).hasClass("uk-hidden")) {
