inn validate, sms verify

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                     <div class="uk-width-medium-1-2 uk-width-small-1-1">
                         <div class="input-holder">
                             <label class="name">
-                                <input type="text" name="inn" class="uk-width-1-1 inp ident-group">
+                                <input type="text" name="identCode" class="uk-width-1-1 inp ident-group">
                                 <span class="input-label">ИНН</span>
                             </label>
                         </div>
@@ -793,6 +793,22 @@
                 <p>Ожидайте звонка от сотрудников банка в рабочее время. <br>Задавайте вопросы и выбирайте карту для себя. <br>Будьте готовы продиктовать паспортные данные и ИНН.</p>
             </div>
         </div>
+        <!-- <div id="sms-valid" class="uk-modal">
+            <div class="uk-modal-dialog">
+                <a class="uk-modal-close uk-close uk-close-alt">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 15" width="15" height="15">
+                        <line x1="0" y1="0" x2="15" y2="15" stroke="#fff" stroke-width="3"/>
+                        <line x1="15" y1="0" x2="0" y2="15" stroke="#fff" stroke-width="3"/>
+                    </svg>
+                </a>
+                <h1>Спасибо за заявку.</h1>
+                
+                <div class="uk-modal-footer uk-text-right">
+                    <button type="button" class="uk-button">Отмена</button>
+                    <button type="button" class="uk-button uk-button-primary">Отправить</button>
+                </div>
+            </div>
+        </div> -->
         <div id="terms-conditions-modal" class="uk-modal">
             <div class="uk-modal-dialog uk-modal-dialog-large">
                 <a class="uk-modal-close uk-close uk-close-alt">
