--- a/index.html
+++ b/index.html
@@ -9,31 +9,31 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?v=2">
         <meta name="theme-color" content="#ff9c0f"/>
-        <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-        <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/manifest.json">
+        <link rel="apple-touch-icon" sizes="57x57" href="img/icons/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="img/icons/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="img/icons/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="img/icons/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="img/icons/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="img/icons/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="img/icons/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="img/icons/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="img/icons/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+        <link rel="manifest" href="manifest.json">
         <meta name="msapplication-TileColor" content="#ff9c0f">
-        <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+        <meta name="msapplication-TileImage" content="img/icons/ms-icon-144x144.png">
 
         <!-- Disable tap highlight on IE -->
         <meta name="msapplication-tap-highlight" content="no">
 
         <link rel="dns-prefetch" href="//fonts.googleapis.com/">
-        <link rel="dns-prefetch" href="//cards-finline.herokuapp.com">
-        <link rel="prerender" href="//cards-finline.herokuapp.com">
+        <link rel="dns-prefetch" href="//cards-finance.herokuapp.com">
+        <link rel="prerender" href="//cards-finance.herokuapp.com">
 
-        <link rel="prefetch" href="//cards-finline.herokuapp.com/css/uikit.css">
+        <link rel="prefetch" href="//cards-finance.herokuapp.com/css/uikit.css">
 
         <meta name="description" content="Finance project">
         <meta name="robots" content="noindex, nofollow">
@@ -793,22 +793,6 @@
                 <p>Ожидайте звонка от сотрудников банка в рабочее время. <br>Задавайте вопросы и выбирайте карту для себя. <br>Будьте готовы продиктовать паспортные данные и ИНН.</p>
             </div>
         </div>
-        <!-- <div id="sms-valid" class="uk-modal">
-            <div class="uk-modal-dialog">
-                <a class="uk-modal-close uk-close uk-close-alt">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 15" width="15" height="15">
-                        <line x1="0" y1="0" x2="15" y2="15" stroke="#fff" stroke-width="3"/>
-                        <line x1="15" y1="0" x2="0" y2="15" stroke="#fff" stroke-width="3"/>
-                    </svg>
-                </a>
-                <h1>Спасибо за заявку.</h1>
-                
-                <div class="uk-modal-footer uk-text-right">
-                    <button type="button" class="uk-button">Отмена</button>
-                    <button type="button" class="uk-button uk-button-primary">Отправить</button>
-                </div>
-            </div>
-        </div> -->
         <div id="terms-conditions-modal" class="uk-modal">
             <div class="uk-modal-dialog uk-modal-dialog-large">
                 <a class="uk-modal-close uk-close uk-close-alt">
